# G0T-m

./: .gitignore
backend/: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  reproduce_issue.py  verify_fix.py
backend/alembic/: env.py
backend/alembic/versions/: 4d4fdd46647d_fix_verification_code_type_and_add_.py  837526e33103_added_user_and_session.py  e569e5ca7e89_increase_password_field_length_to_255.py
backend/app/: router.py
backend/app/advices/: base_response.py  global_exception.py  response.py
backend/app/config/: base_repository.py  settings.py
backend/app/db/: db_connection.py
backend/app/exceptions/: exceptions.py
backend/app/middlewares/: dependencies.py
backend/app/modules/chat_service/model/: chat_message_source.py  chat_session.py  chat_session_message.py
backend/app/modules/chat_service/utils/: doc_processor.py
backend/app/modules/upload_service/router/: upload_router.py
backend/app/modules/upload_service/schema/: upload_schema.py
backend/app/modules/upload_service/service/: upload_service.py
backend/app/modules/user_service/models/: session_model.py  user_model.py
backend/app/modules/user_service/repositories/: session_repository.py  user_repository.py
backend/app/modules/user_service/router/: auth_router.py  session_router.py  user_router.py
backend/app/modules/user_service/schema/: auth_schema.py  session_schema.py  user_schema.py
backend/app/modules/user_service/service/: auth_service.py  session_service.py  user_services.py
backend/app/modules/utils/: object_service.py
frontend/: .gitignore  (+2 more)
(+3 files in other folders)
